--- a/static/style.css
+++ b/static/style.css
@@ -107,3 +107,11 @@ dialog {
 dialog.closing {
     animation: close 0.5s ease-out backwards;
 }
+
+.failed-status {
+    color: #ee0505;
+}
+
+.operational-status {
+    color: #05ee05;
+}
