--- a/static/style.css
+++ b/static/style.css
@@ -30,9 +30,21 @@ td {
     border-bottom: 1px solid #444;
     font-size: 18px;
     text-align: left;
+    white-space: nowrap;
     button {
         margin-left: 10px;
     }
+}
+.fixed {
+    width: 0px;
+    margin: 0 10px;
+}
+
+.flexible {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 0px;
 }
 
 th {
@@ -114,4 +126,29 @@ dialog.closing {
 
 .operational-status {
     color: #05ee05;
+}
+
+.status-box {
+    padding: 10px;
+    border-radius: 6px;
+    font-weight: bold;
+    width: 100%;
+    min-height: 50px;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.green-box {
+    background-color: #05ee0520;
+    color: #05ee05;
+    border: 1px solid #05ee05;
+}
+
+.red-box {
+    background-color: #ee050510;
+    color: #ee0505;
+    border: 1px solid #ee0505;
 }
