--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/static/style.css">
 
-    <title>A4 Monitor</title>
+    <title>{{ .title }}</title>
 </head>
 
 <body>
     <content>
-        <h1>A4 Monitor</h1>
+        <h1>{{ .title }}</h1>
         <p id="checkStatus" class="status-box green-box">checking...</p>
         <table>
             <thead>
